Alarm/error
javac Program.java
Program.java:7: error: cannot find symbol
		Alarm alertClock = new Alarm();
		^
  symbol:   class Alarm
  location: class Program
Program.java:7: error: cannot find symbol
		Alarm alertClock = new Alarm();
		                       ^
  symbol:   class Alarm
  location: class Program
2 errors
